@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Log-Detect
-version:      1.420
+version:      1.421
 version_from: lib/Log/Detect.pm
 installdirs:  site
 requires:
