@@ -1,11 +1,11 @@
 #!/usr/bin/perl -w
 #=============================================================================
-# $Id: vtrace 7637 2005-10-19 16:02:08Z wsnyder $
+# $Id: vtrace 15289 2006-03-06 15:45:36Z wsnyder $
 #=============================================================================
 #
 # This program creates a define group file for waves
 # 
-# Copyright 2000-2005 by Wilson Snyder.  This program is free software;
+# Copyright 2000-2006 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # Lesser General Public License or the Perl Artistic License.
 # 
@@ -90,7 +90,7 @@ exit(defined $stat?10:0);
 #----------------------------------------------------------------------
 
 sub usage {
-    print '$Id: vtrace 7637 2005-10-19 16:02:08Z wsnyder $ ', "\n";
+    print '$Id: vtrace 15289 2006-03-06 15:45:36Z wsnyder $ ', "\n";
     $SIG{__WARN__} = sub{};	#pod2text isn't clean.
     pod2text($0);
     exit (1);
@@ -167,7 +167,7 @@ is missing.
 
 The latest version is available from CPAN and from L<http://www.veripool.com/>.
 
-Copyright 2000-2005 by Wilson Snyder.  This package is free software; you
+Copyright 2000-2006 by Wilson Snyder.  This package is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
 Lesser General Public License or the Perl Artistic License.
 
