@@ -3,6 +3,10 @@ Revision history for Perl extension Log::Detect.
 The contributors that suggested a given feature are shown in [].  [by ...]
 indicates the contributor was also the author of the fix; Thanks!
 
+* Log::Detect 1.421 2006/03/06
+
+****	Add report_limit to huge number of dinotrace cursors.  [Bryce Denney]
+
 * Log::Detect 1.420 2005/10/19
 
 **	NEWS is now renamed Changes, to support CPAN indexing. [Offer Kaye]
@@ -33,12 +37,12 @@ indicates the contributor was also the author of the fix; Thanks!
 ****	Move files into lib directory to support perl 5.8.0. [Mike Castle]
 
 ----------------------------------------------------------------------
-$Id: Changes 7020 2005-10-05 15:52:08Z wsnyder $
+$Id: Changes 15289 2006-03-06 15:45:36Z wsnyder $
 ----------------------------------------------------------------------
 
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
-Copyright 2001-2005 by Wilson Snyder.  This program is free software;
+Copyright 2001-2006 by Wilson Snyder.  This program is free software;
 you can redistribute it and/or modify it under the terms of either the GNU
 General Public License or the Perl Artistic License.
 
